@startuml DeleteCommandClassDiagram
hide circle
skinparam classAttributeIconSize 0

abstract class Command {
	+execute(...) : void
}

class DeleteCommand {
	-oneBasedIndex : int
	+execute(...) : void
}

class WorkoutList {
	+getSize() : int
	+getWorkoutAtIndex(index : int) : Workout
	+deleteWorkout(index : int) : void
	+getWorkouts() : List<Workout>
}

abstract class Workout {
	+getDescription() : String
}

class Storage {
	+saveData(...) : boolean
}

class Ui {
	+showMessage(message : String) : void
	+showError(message : String) : void
}

class UserProfile

Command <|-- DeleteCommand
DeleteCommand ..> WorkoutList
DeleteCommand ..> Workout
DeleteCommand ..> Storage
DeleteCommand ..> Ui
DeleteCommand ..> UserProfile
WorkoutList --> "*" Workout
@enduml
